<resources>
    <string name="app_name">Interaction Demo</string>
    <string name="dismissed">Dismissed</string>
    <string name="loading">Loading…</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equals">=</string>
    <string name="units">Units</string>
    <string name="statisticViewDefaultValue">0</string>
    <string name="statisticViewDefaultUnit">count</string>
    <string name="index">Index</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="dollar_format">$%1$s</string>
    <string name="dollar_space_format">$%1$s\u00a0</string>
    <string name="unknown_quantity">\?\?\?</string>
    <string name="goalInvestmentStatisticViewLabel">Goal</string>
    <string name="funding">Funding</string>
    <string name="plus_constituent">+ Constituent +</string>
    <string name="save">Save</string>
    <string name="correctionViewDefaultSymbolText">SYMBOL</string>
    <string name="hold">Hold</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="buy_format">Buy $%1$s</string>
    <string name="sell_format">Sell $%1$s</string>
    <string name="stock_symbol">Stock Symbol</string>
    <string name="none_selected">None selected</string>
    <string name="choose_a_stock">Choose a stock</string>
    <string name="title_activity_constituent_search">ConstituentSearchActivity</string>
    <string name="find_constituent">Find Constituent</string>
    <string name="add_constituent">Add Constituent</string>
    <string name="market_capitalization">Market capitalization</string>
    <string name="symbol">Symbol</string>
    <string name="not_found">Not found</string>
    <string name="no_results_found">No results found</string>
    <string name="zero_billion">$0B</string>
    <string name="not_applicable">N/A</string>
    <string name="new_constituent">New Constituent</string>
    <string name="searching">Searching…</string>
    <string name="update_shares">Update Shares</string>
    <string name="buy_not_advice">Buy $%1$s » $%2$s</string>
    <string name="sell_not_advice">Sell $%1$s » $%2$s</string>
    <string name="hold_not_advice">Hold</string>
    <string name="buy_not_advice_short">Buy $%1$s</string>
    <string name="sell_not_advice_short">Sell $%1$s</string>
    <string name="hold_not_advice_short">Hold</string>
    <string name="value_and_shares">$%1$s ⋄ %2$s shares</string>
    <string name="more">More</string>
    <string name="total">Total</string>
    <string name="shares">Shares</string>
    <string name="n_shares">%1$s shares — $%2$s</string>
    <string name="share_price">Share price</string>
    <string name="adjust_cash_in">Subtract value from cash</string>
    <string name="old_shares_format">%1$s\nshares</string>
</resources>
