<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/updateSharesLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/AppTheme">

    <TextView
        android:id="@+id/symbolTextView"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="TSLA" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/secondaryStrokeColor" />

    <LinearLayout
        android:id="@+id/shareCountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/total">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/totalCountEditText"
                style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:lines="1"
                android:singleLine="true"
                tools:text="1010" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/equals"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/secondaryDarkStrokeColor" />

        <TextView
            android:id="@+id/oldCountTextView"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:lines="2"
            android:textAlignment="center"
            android:textColor="@color/secondaryDarkStrokeColor"
            tools:text="@string/old_shares_format" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/plus"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/secondaryDarkStrokeColor" />


        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/more">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/deltaCountEditText"
                style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:lines="1"
                android:singleLine="true"
                tools:text="10" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/share_price">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sharePriceEditText"
            style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_attach_money_black_24dp"
            android:drawableTint="@color/secondaryDarkStrokeColor"
            android:inputType="numberDecimal"
            android:lines="1"
            android:singleLine="true"
            tools:text="10" />

    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <CheckBox
        android:id="@+id/adjustCashCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adjust_cash_in" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <android.support.design.button.MaterialButton
        android:id="@+id/saveButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:text="@string/save" />

</LinearLayout>