<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainViewing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/primaryTextColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="horizontal"
            android:padding="16dp">

            <com.rubyhuntersky.indexrebellion.views.StatisticView
                android:id="@+id/goalStatisticView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rounded_primary_light"
                custom:labelText="Goal"
                custom:text="$88.8M"
                custom:textColor="@color/primaryTextColor" />

            <TextView
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/equals"
                android:textColor="#50ffffff"
                android:textSize="23sp" />

            <com.rubyhuntersky.indexrebellion.views.StatisticView
                android:id="@+id/investedStatisticView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rounded_primary_light"
                custom:labelText="Invested"
                custom:text="$9.99M"
                custom:textColor="@color/primaryTextColor" />

            <TextView
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:text="@string/plus"
                android:textColor="#50ffffff"
                android:textSize="23sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1">

                <com.rubyhuntersky.indexrebellion.views.StatisticView
                    android:id="@+id/depositStatisticView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    custom:labelText="Withdraw"
                    custom:text="$3.33M"
                    custom:textColor="@color/secondaryLightColor" />

                <android.support.design.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:strokeColor="@color/secondaryLightColor" />
            </FrameLayout>
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/index"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <View
                android:layout_width="4dp"
                android:layout_height="16dp"
                android:layout_margin="2dp"
                android:background="@color/secondaryStrokeColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SYMBOL"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="15" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="16dp"
                    android:layout_weight="30"
                    android:background="@color/primaryColor" />

                <View
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/bg_circle" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="16dp"
                    android:layout_weight="30"
                    android:background="@color/primaryColor" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="16dp"
                    android:layout_weight="10"
                    android:background="@drawable/bg_outlined_rectangle" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="5" />
            </LinearLayout>

            <android.support.design.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Buy $10.4K" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
